--- a/prioritizer/templates/prioritizer/index.html
+++ b/prioritizer/templates/prioritizer/index.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
-
+{% load static %}
 <html lang="en">
 
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Laundry Manager</title>
+        <link rel="stylesheet" href="{% static 'prioritizer/login.css' %}">
+        <title>Login</title>
     </head>
 
     <body>
-        <div class="customer-details">
-            <p>New Customer?</p>
-            <form action="">
-                <input type="text" placeholder="Name">
-                <input type="text" placeholder="Phone Number">
-                <input type="text" placeholder="Number of clothes">
-                <input type="submit">
-            </form>
+        <div class='container'>
+            <div class='inner'>
+                <form action='' autocomplete="off">
+                    <input type="text" placeholder="Username" name="username">
+                    <input type="password" placeholder="Password" name="password">
+                    <a href="/home" id="submit"><p>Login</p></a>
+                </form>
+            </div>
         </div>
     </body>
 
