--- a/prioritizer/static/prioritizer/styles.css
+++ b/prioritizer/static/prioritizer/styles.css
@@ -199,7 +199,7 @@ input[type="radio"]:checked {
     right: 0;
     background-color: var(--app-theme);
     display: inline-block;
-    height: 10%;
+    height: 8%;
     padding: 3%;
     text-align: center;
     border-radius: 0 0 0 5px;
@@ -244,4 +244,9 @@ input[type="radio"]:checked {
     top: 13%;
     grid-column: 2/3;
     grid-row: 1/3;
+}
+
+.washing:hover::before,
+.done:hover::before {
+    background-color: rgba(189, 162, 255, 0.5);
 }
